--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -82,8 +82,9 @@
         "Real estate type": "Real estate type",
         "Price range": "Price range",
         "Select Area": "Select Area",
-        "Select Neighborhood": "Neighborhood",
+        "Select Neighborhood": "Select Neighborhood",
         "Select type": "Select type",
+        "Select city": "Select City",
         "Select price range": "Select price range",
         "All Prices":"All Prices",
         "Max Price": "Max Price",
