--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,7 +20,7 @@
         "Home":"Home",
         "success": "Your profile has been updated successfully!",
         "Name":"Name",
-        "Please Enter a valid phone number":"Please Enter a valid phone number",
+        "Please Enter a valid phone number":"Please enter a valid phone number.",
         "Save Changes":"Save Changes"
     },
     "button": {
@@ -82,9 +82,9 @@
         "Real estate type": "Real estate type",
         "Price range": "Price range",
         "Select Area": "Select Area",
-        "Select Neighborhood": "Neighborhood",
+        "Select Neighborhood": "Select Neighborhood",
         "Select type": "Select type",
-        "Select price range": "Select price range",
+        "Select price range": "Any price",
         "All Prices":"All Prices",
         "Max Price": "Max Price",
         "Min Price": "Min Price",
@@ -302,10 +302,10 @@
         "remove from favorite":"Unit removed from your favorite Successfully"
     },
     "signIn":{
-        "Sign In":"Sign In",
+        "Sign Up":"Sign Up",
         "OTP Verification":"OTP Verification",
         "Your name and image":"Your name and image",
-        "Please Enter a valid phone number":" Please Enter a valid phone number",
+        "Please Enter a valid phone number":" Please enter a valid phone number.",
         "Request OTP":"Request OTP",
         "Enter the OTP sent to":"Enter the OTP sent to",
         "Invalid OTP, Please try again":"Invalid OTP, Please try again",
