--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -263,11 +263,13 @@
             "Home": "Home",
             "sell": "Sell"
         },
-        "Go to the best buyer":"Go to the best buyer",
+        "Go to the best buyer":"Find the best buyer",
         "Step":"Step",
         "unit Photos":"unit Photos",
         "Select your option":"Select your option",
         "Enter value":"Enter a numeric value",
+        "Unit Title":"Write a unique title for your unit to attract buyers",
+        "Unit Description":"Write an accurate description of your unit of at least 150 characters ...",
         "photoUpload": {
             "Select category":"Select category to upload it's photos",
             "Add photo for the":"Add at least 1 photo for the",
@@ -354,7 +356,7 @@
     "no_properties":"You don't have any properties",
     "list_properties":"List your properties and add their specs to view them here",
     "add_property":"Add new property",
-    "alaqaar_solution":"Alaaqar Solution",
+    "alaqaar_solution":"Alaaqar Solutions",
     "solution_text":"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.",
     "try_solution":"Try our solution",
     "search_button":"Quick search",
