--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -260,6 +260,9 @@
         "Go to the best buyer":"ابحث عن أفضل مشتر",
         "Step":"خطوة",
         "unit Photos":"صور الوحدة",
+        "Real images": "صور حقيقية",
+        "Masterplan":"المخطط الرئيسي",
+        "View photos": "عرض الصور",
         "Select your option":"حدد خيارك",
         "Enter value":"ادخل قيمة رقمية",
         "Unit Title":"اكتب عنوانًا فريدًا لوحدتك لجذب المشترين",
