--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -266,6 +266,9 @@
         "Go to the best buyer":"Find the best buyer",
         "Step":"Step",
         "unit Photos":"unit Photos",
+        "Real images": "Real images",
+        "Masterplan":"Masterplan",
+        "View photos": "View photos",
         "Select your option":"Select your option",
         "Enter value":"Enter a numeric value",
         "Unit Title":"Write a unique title for your unit to attract buyers",
