--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -192,10 +192,18 @@
         "Home":"الرئيسية",
         "Buy a home":"شراء منزل",
         "Set your priorities and drag and drop them from left to right":"حدد أولوياتك واختارها من اليسار إلى اليمين",
+        "High priority":"أولوية عالية",
+        "Select High priority":"حدد خيارات الأولوية العالية الخاصة بك وانقر فوق الزر تم للانتقال إلى الأولوية التالية",
+        "Medium priority":"أولوية متوسطة",
+        "Select Medium priority":"حدد خيارات الأولوية المتوسطة الخاصة بك وانقر فوق الزر تم للانتقال إلى الأولوية التالية",
+        "Low priority":"أولوية منخفضة",
+        "Select Low priority":"حدد خياراتك ذات الأولوية المنخفضة وانقر على زر تم لتعيين أولوياتك",
         "Priority 1":"الأولوية ١",
         "Priority 2":"الأولوية ٢",
         "Priority 3":"الأولوية ٣",
-        "Priority 4":"الأولوية ٤"
+        "Priority 4":"الأولوية ٤",
+        "Done": "تم",
+        "Edit": "تعديل"
     },
     "setupBuyerPriorities": {
         "Priority":"الاولوية",
