--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -200,18 +200,10 @@
         "Home":"Home",
         "Buy a home":"Buy a home",
         "Set your priorities and drag and drop them from left to right":"Set your priorities and drag and drop them from left to right",
-        "High priority":"High Priority",
-        "Select High priority":"Select your High priority options and click on the Done button to move to the following priority",
-        "Medium priority":"Medium Priority",
-        "Select Medium priority":"Select your Medium priority options and click on the Done button to move to the following priority",
-        "Low priority":"Low Priority",
-        "Select Low priority":"Select your Low priority options and click on the Done button to set your priorities",
         "Priority 1":"Priority 1",
         "Priority 2":"Priority 2",
         "Priority 3":"Priority 3",
-        "Priority 4":"Priority 4",
-        "Done": "Done",
-        "Edit": "Edit"
+        "Priority 4":"Priority 4"
     },
     "setupBuyerPriorities": {
         "Priority":"Priority",
@@ -228,6 +220,7 @@
         },
         "My Property": "My Property",
         "My inquiry": "My inquiry",
+        "My Unpublished":"My Unpublished",
         "Grid View": "Grid View",
         "List View": "List View",
         "No units yet": "No units yet.",
@@ -274,20 +267,15 @@
         "Go to the best buyer":"Find the best buyer",
         "Step":"Step",
         "unit Photos":"unit Photos",
-        "upload photos":"Upload Photos",
         "Real images": "Real images",
-        "Image Category": "Image Category", 
-        "required real images": "Please make sure to upload at least 5 images and select their categories",
         "Masterplan":"Masterplan",
         "View photos": "View photos",
-        "Click upload": "Click to Upload Unit Photos",
         "Select your option":"Select your option",
         "Enter value":"Enter a numeric value",
         "Unit Title":"Write a unique title for your unit to attract buyers",
         "Unit Description":"Write an accurate description of your unit of at least 150 characters ...",
         "photoUpload": {
-            "Select category":"Upload the unit photos and select their category",
-            "Select category masterplan": "Upload the master plan and unit photos if it available",
+            "Select category":"Select category to upload it's photos",
             "Add photo for the":"Add at least 1 photo for the",
             "add images":"add images"
         }
