--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -298,7 +298,11 @@
         "Options":"Options",
         "Your chosen Items for Priority":"Your chosen Items for Priority",
         "Option":"Option",
-        "ar Priority":""
+        "ar Priority":"",
+        "Choose Options": "Or choose options",
+        "Choose Keywords":"Or search by keywords",
+        "Placeholder": "City, District or Compounds"
+        
 
     },
     "propertyDetails":{
@@ -377,7 +381,7 @@
     "solution_text":"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.",
     "try_solution":"Try our solution",
     "search_button":"Quick search",
-    "electronic_consultant":"Electronic Consultant",
+    "electronic_consultant":"Electronic Advisor",
     "sign_up":"Sign up",
     "current_language":"E",
     "no_results":"No Results Found",
