--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -343,7 +343,8 @@
         "terms & conditions":"terms & conditions",
         "and":"and",
         "Privacy policy":"Privacy policy",
-        "Login":"Login"
+        "Login":"Login",
+        "Email":"Email"
     },
     "howItWorks":{
         "How it works":"How it works",
