--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -267,6 +267,7 @@
             "sell": "بيع"
         },
         "Go to the best buyer":"ابحث عن أفضل مشتر",
+        "Required": "مطلوب",
         "Step":"خطوة",
         "unit Photos":"صور الوحدة",
         "upload photos":"رفع الصور",
