--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -273,6 +273,7 @@
             "sell": "Sell"
         },
         "Go to the best buyer":"Find the best buyer",
+        "Required": "Required",
         "Step":"Step",
         "unit Photos":"unit Photos",
         "upload photos":"Upload Photos",
