--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -228,6 +228,7 @@
             "myunits": "My units "
         },
         "My Property": "My Property",
+        "My Unpublished": "My Unpublished",
         "My inquiry": "My inquiry",
         "Grid View": "Grid View",
         "List View": "List View",
@@ -329,7 +330,9 @@
             "Results": "Results",
             "filter by":"Default",
             "Price":"Price",
-            "Score":"Score"
+            "Score":"Score",
+            "PriceHigh":"Price: Low to High",
+            "PriceLow":"Price: High to Low"
         }
     },
     "favorites": {
