--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -321,6 +321,7 @@
             "Buy a home":"شراء",
             "Results": "نتائج البحث",
             "filter by":"إفتراضي",
+            "Filters": "فلاتر", 
             "Price":"السعر",
             "Score":"Score",
             "PriceHigh":"السعر: من الأكثر إلى الأقل",
