--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -329,6 +329,7 @@
             "Buy a home":"Buy a home",
             "Results": "Results",
             "filter by":"Default",
+            "Filters": "Filters", 
             "Price":"Price",
             "Score":"Score",
             "PriceHigh":"Price: Low to High",
