New Search Filter

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -381,7 +381,8 @@
     "solution_text":"هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر إدخال بعض النوادر أو الكلمات العشوائية إلى النص. إن كنت تريد أن تستخدم نص لوريم إيبسوم ما، عليك أن تتحقق أولاً أن ليس هناك أي كلمات أو عبارات محرجة أو غير لائقة مخبأة في هذا النص. بينما تعمل جميع مولّدات نصوص لوريم إيبسوم على الإنترنت",
     "try_solution":"جرب حل العقار",
     "search_button":"بحث سريع",
-    "electronic_consultant":"المستشار الإلكتروني",
+    "electronic_consultant":"جربه الآن",
+    "advisor_description": "تم إنشاء محرك بحث 'العقار' بالذكاء الاصطناعي الذي يرشدك عبر خطوات سهلة وبسيطة لتحديد متطلباتك بدقة ، وهذا هو النهج الأكثر دقة وفعالية للعثور على عقارك المثالي.",
     "sign_up":"إنشاء حساب",
     "current_language":"ع",
     "no_results":"لا يوجد نتائج بحث",
