--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -387,7 +387,8 @@
     "solution_text":"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.",
     "try_solution":"Try our solution",
     "search_button":"Quick search",
-    "electronic_consultant":"Electronic Advisor",
+    "electronic_consultant":"Try it now",
+    "advisor_description": "'Al-AQAR' search engine created with Artificial Intelligence that guides you through easy and simple steps to precisely determine your demands, and this is the most accurate and effective approach to find your perfect property.",
     "sign_up":"Sign up",
     "current_language":"E",
     "no_results":"No Results Found",
