--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -94,7 +94,7 @@
         "Compound": "مُجَمَّع",
         "Real estate type":"نوع العقار",
         "Price range":"متوسط السعر",
-        "Price range hint": "السعر الأدنى في هذه المنطقة: ",
+        "Price range hint": "السعر الأدنى في هذه",
         "Select Area":"اختار المنطقة",
         "Select Neighborhood":"اختار الحي",
         "Select type":"اختار نوع العقار",
