--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -101,7 +101,7 @@
         "Compound": "Compound",
         "Real estate type": "Real estate type",
         "Price range": "Price range",
-        "Price range hint": "Minimum price in this area: ",
+        "Price range hint": "Minimum price in this",
         "Select Area": "Select Area",
         "Select Neighborhood": "Select Neighborhood",
         "Select type": "Select type",
