Mr Moataz Comments

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -32,8 +32,7 @@
             "Submit":"إرسال",
             "Back":"رجوع",
             "Next":"القادم",
-            "Review":"مراجعة",
-            "Confirm": "أؤكد"
+            "Review":"مراجعة"
         }
     },
     "model":{
@@ -90,11 +89,9 @@
         "City":"المدينة",
         "Area":"المنطقة",
         "Neighborhood":"الحي",
-        "Location": "الموقع",
-        "Compound": "مُجَمَّع",
         "Real estate type":"نوع العقار",
         "Price range":"متوسط السعر",
-        "Price range hint": "السعر الأدنى في هذه",
+        "Price range hint": "السعر الأدنى في هذه المنطقة: ",
         "Select Area":"اختار المنطقة",
         "Select Neighborhood":"اختار الحي",
         "Select type":"اختار نوع العقار",
@@ -128,13 +125,13 @@
         "howItWorks":{
             "Its the easiest way to buy sell":"إنها أسهل طريقة لشراء أو بيع أو تأجير وحدة",
             "properties":"سكنية او تجارية !",
-            "Find your perfectly":"ابحث عن العقار",
-            "matched property":"متطابق مع احلامك وتفضيلاتك",
-            "Reach ready buyers":"الوصول الي مشترين",
-            "looking for exactly":"يبحثون عن عقار مطابق لعقارك ",
+            "Find your perfectly":"اختر عقارك",
+            "matched property":"العقار يقدم لك 3  طرق للبحث لتختار بينهم بما يناسب احتياجاتك عملية البحث النصي",
+            "Reach ready buyers":"احصل على النتائج المطابقة",
+            "looking for exactly":"مع اختيارك لأي طريقة من الطرق السابقة ستحصل على الوحدات الناتجة من بحثك و يتواصل معك  أحد مستشارينا العقاريين ليقدم لك أفضل الاقتراحات دون ادنى تكلفة. ",
             "your property":" تماما",
-            "Automatically book":"حجز الزيارات",
-            "visits attended by":"تلقائيا بحضور المستشارين ",
+            "Automatically book":" حدد موعد الزيارات",
+            "visits attended by":"سوف ينظم مستشارنا العقاري المواعيد ويساعدك في اتخاذ القرار ويناقش معك أفضل الخيارات المتاحة المطابقة لاحتياجاتك",
             "your consultants":"العقاريين",
             "Complete your deal":"أكمل صفقتك",
             "with the lowest":"بأقل تكلفة",
@@ -233,6 +230,7 @@
         "No result": "لايوجد نتائج للبحث.",
         "Add new Property":"اضافة عقار جديد",
         "List a new Property": "اضافة عقار جديد",
+        "description": "يمكنك اضافة خيارات اخرى إلى عملية البحث، نحتفظ بكل تلك البيانات إذا أردت الرجوع اليها مرة اخرىيمكنك إضافة عقار اخر الي اختياراتك، والحصول على موعد زيارة من هنا.",
         "View Results":" مشاهدة النتائج"
     },
     "myvisits": {
@@ -380,14 +378,15 @@
     "no_properties":"ليس لديك أية خصائص",
     "list_properties":"قائمة الممتلكات الخاصة بك وإضافة المواصفات الخاصة بهم لعرضها هنا",
     "add_property":"إضافة خاصية جديدة",
-    "alaqaar_solution":"إقتراح العقار",
-    "solution_text":"هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر إدخال بعض النوادر أو الكلمات العشوائية إلى النص. إن كنت تريد أن تستخدم نص لوريم إيبسوم ما، عليك أن تتحقق أولاً أن ليس هناك أي كلمات أو عبارات محرجة أو غير لائقة مخبأة في هذا النص. بينما تعمل جميع مولّدات نصوص لوريم إيبسوم على الإنترنت",
+    "alaqaar_solution":"ما هو العقار؟",
+    "solution_text":"العقار، هو اول محرك بحث مدعم بواسطة الذكاء الاصطناعي، ليجد لك افضل الخيارات المتاحة من العقارات للغرض الذي يناسب احتياجاتك، مما يوفر الكثير من الوقت والمجهود وعناء البحث، وايضا عمولات الشراء للوسطاء العقاريين، اما اذا كنت صاحب عقار يوفر لك العقار  المشتري المناسب مما يسهل من عملية البيع ويوفر الوقت والمجهود.",
     "try_solution":"جرب حل العقار",
     "search_button":"بحث سريع",
     "electronic_consultant":"جربه الآن",
     "advisor_description1": "جرب",
     "advisor_description2": " بحث العقار بالذكاء الاصطناعي,",
     "advisor_description3": " بخطوات سهلة وبسيطة ستحصل على عقارك المثالي.",
+    "advisor_description": "تم إنشاء محرك بحث 'العقار' بالذكاء الاصطناعي الذي يرشدك عبر خطوات سهلة وبسيطة لتحديد متطلباتك بدقة ، وهذا هو النهج الأكثر دقة وفعالية للعثور على عقارك المثالي",
     "sign_up":"إنشاء حساب",
     "current_language":"ع",
     "no_results":"لا يوجد نتائج بحث",
